kubernetes/core/authentik/authentik/db/service.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
---
apiVersion: v1
kind: Service
metadata:
  name: &app authentik-postgres
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/poolerName: authentik-db-pooler-rw
